[gd_scene load_steps=28 format=3 uid="uid://bhnpndq103000"]

[ext_resource type="Script" path="res://Scenes/Entities/Player/PlayerController.gd" id="1_rtbnh"]
[ext_resource type="Texture2D" uid="uid://mqdk8ngyxn4a" path="res://art/entities/player/player.png" id="2_v86nl"]
[ext_resource type="Texture2D" uid="uid://dfs8s7766rtc7" path="res://art/entities/player/manameter.png" id="3_0bgoy"]
[ext_resource type="Script" path="res://Scenes/Scripts/Camera_Controller.gd" id="4_g14o7"]
[ext_resource type="Texture2D" uid="uid://dik1xa5ju6476" path="res://art/entities/player/personalflame.png" id="5_ysof4"]
[ext_resource type="Texture2D" uid="uid://b5svghg81lvlw" path="res://art/scenes/lights/light_round.jpg" id="6_fd8n3"]
[ext_resource type="AudioStream" uid="uid://n10c8s846hhe" path="res://Sounds/hitHurt.wav" id="7_w0hxx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5fmh0"]
atlas = ExtResource("2_v86nl")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbb4q"]
atlas = ExtResource("2_v86nl")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq8h2"]
atlas = ExtResource("2_v86nl")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iv1o"]
atlas = ExtResource("2_v86nl")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuut0"]
atlas = ExtResource("2_v86nl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbcff"]
atlas = ExtResource("2_v86nl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyjuf"]
atlas = ExtResource("2_v86nl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wijg3"]
atlas = ExtResource("2_v86nl")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gswe"]
atlas = ExtResource("2_v86nl")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_421y2"]
atlas = ExtResource("2_v86nl")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae3fk"]
atlas = ExtResource("2_v86nl")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4qo7"]
atlas = ExtResource("2_v86nl")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_36vxj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fmh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbb4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq8h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iv1o")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuut0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbcff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyjuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wijg3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gswe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_421y2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae3fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4qo7")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_25ms7"]
size = Vector2(7, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vdem"]
size = Vector2(5, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffwjt"]
atlas = ExtResource("5_ysof4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j2c1"]
atlas = ExtResource("5_ysof4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vnqy"]
atlas = ExtResource("5_ysof4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_51uj8"]
atlas = ExtResource("5_ysof4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_w5afv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffwjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j2c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vnqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51uj8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="Node2D"]

[node name="character" type="CharacterBody2D" parent="." groups=["Player"]]
collision_layer = 3
script = ExtResource("1_rtbnh")

[node name="Sprite2D" type="AnimatedSprite2D" parent="character"]
sprite_frames = SubResource("SpriteFrames_36vxj")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="character"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_25ms7")

[node name="Area2D" type="Area2D" parent="character" groups=["Player"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="character/Area2D" groups=["Player"]]
position = Vector2(-0.5, 9)
shape = SubResource("RectangleShape2D_3vdem")

[node name="manameter" type="Sprite2D" parent="character"]
position = Vector2(0, -7)
texture = ExtResource("3_0bgoy")
hframes = 7

[node name="Camera2D" type="Camera2D" parent="character"]
position = Vector2(0, -37)
enabled = false
script = ExtResource("4_g14o7")

[node name="personalflame" type="AnimatedSprite2D" parent="character"]
position = Vector2(-7, 0)
sprite_frames = SubResource("SpriteFrames_w5afv")
offset = Vector2(0, -3)

[node name="PointLight2D" type="PointLight2D" parent="character/personalflame"]
texture = ExtResource("6_fd8n3")
texture_scale = 0.1

[node name="playerleft" type="Node2D" parent="character"]
position = Vector2(-7, 0)

[node name="playerright" type="Node2D" parent="character"]
position = Vector2(7, 0)

[node name="hurt" type="AudioStreamPlayer" parent="character"]
stream = ExtResource("7_w0hxx")

[node name="deathtimer" type="Timer" parent="character"]
wait_time = 0.5

[connection signal="body_entered" from="character/Area2D" to="character" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="character/Area2D" to="character" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="character/deathtimer" to="character" method="_on_deathtimer_timeout"]
